Corrected issue on mobile site

--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -8,6 +8,10 @@ html, body {
 	margin: 0;
 }
 
+.modal {
+    background-color: inherit;	
+}
+
 form .form-group *, a.btn, input.btn, button.btn, button {
 	font-size: 25px !important;
 } 
@@ -166,6 +170,14 @@ footer .registerNCopyright {
 		height: 500px !important;
 	}
 	
+	#sidenav-overlay {
+		z-index: initial;
+	}
+	
+	a.navbar-brand, a.brand-logo {
+		background: url(/images/jrh_logo_white.png);
+}
+
 	nav {
 		position: fixed;
 		z-index: 10;
